Run gofmt and lint serially so the output is understandable, then run tests in parallel.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: go
 sudo: required
 install: pip install --upgrade pip
-script: make gofmt lint test
+script: make gofmt lint; make -j4 test
