--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: go
+# Upgrade default Travis pip which is old and doesn't work the way we expect.
+# Need sudo to do that.
 sudo: required
 install: pip install --upgrade pip
-script: make gofmt lint; make -j4 test
+# Run gofmt and lint serially to avoid confusing output. Run tests in parallel
+# for speed.
+script: make gofmt lint; make -j2 test
