--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ sudo: required
 install: pip install --upgrade pip
 # Run gofmt and lint serially to avoid confusing output. Run tests in parallel
 # for speed.
-script: make gofmt lint; make -j2 test
+script: make gofmt lint && make -j2 test
