Remove dependence on pip. Add osx to Travis test matrix.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: go
+os:
+  - linux
+  - osx
 # Upgrade default Travis pip which is old and doesn't work the way we expect.
 # Need sudo to do that.
 sudo: required
 install: pip install --upgrade pip
 # Run gofmt and lint serially to avoid confusing output. Run tests in parallel
 # for speed.
-script: make gofmt lint; make -j2 test
+script: make gofmt lint && make -j2 test
