runtime: Fix complain about linting and Go 1.9 compiler error

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: go
 os:
   - linux
   - osx
+osx_image: xcode7
 # Run gofmt and lint serially to avoid confusing output. Run tests in parallel
 # for speed.
 script: make gofmt lint && make -j2 test
