--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ os:
 before_script:
   - rvm get head || true # https://github.com/travis-ci/travis-ci/issues/6307 
   - set -e
-  - python setup.py develop
+  - pip2 install --user .
   - cd grumpy-runtime-src
 # Run gofmt and lint serially to avoid confusing output. Run tests in parallel
 # for speed.
