rvm (#6307) strikes back && On OSX do sudo, on Linux dont.
rvm (#6307) strikes back && On OSX do sudo, on Linux dont.

Found the culprit: rvm provides `cd` binary!

See:
https://github.com/touist/touist/commit/5d7a327043e26a0ecc0a04f0fd040899dec6f63f#diff-354f30a63fb0907d4ad57269548329e3R52
See:
https://github.com/rvm/rvm/blob/ff63fa117bd05e581ecbf2b0378d9ddbb263deb1/scripts/cd#L14
See:
https://github.com/travis-ci/travis-ci/issues/8703#issuecomment-343681281
and
https://github.com/travis-ci/travis-ci/issues/8703#issuecomment-347881274

Install pip locally

Fix: Travis on OSX swallows error logs

See: https://github.com/travis-ci/travis-ci/issues/6018

"never use set -e directly in .travis.yml"

See: https://github.com/travis-ci/docs-travis-ci-com/issues/1672#issuecomment-363232212
See: https://github.com/travis-ci/travis-ci/issues/6307#issuecomment-355956554

On OSX, do sudo. On Linux, dont.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,16 @@ os:
   - linux
   - osx
 before_script:
-  - rvm get head || true # https://github.com/travis-ci/travis-ci/issues/6307 
-  - set -e
-  - pip2 install --user .
-  - cd grumpy-runtime-src
+  - python -c "import fcntl; fcntl.fcntl(1, fcntl.F_SETFL, 0)"  # https://github.com/travis-ci/travis-ci/issues/8920#issuecomment-352661024
 # Run gofmt and lint serially to avoid confusing output. Run tests in parallel
 # for speed.
-script: make gofmt lint && make -j2 test
-after_script: set +e
+script:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo pip2 install . ; fi
+  - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then pip2 install . --user ; fi
+  - which grumpy
+  - cd grumpy-runtime-src
+  - make gofmt lint && make -j2 test
+
+# OSX swallows error logs: https://github.com/travis-ci/travis-ci/issues/6018
+after_error:
+  - echo "== End of test log ==""
