Should include tools!

--- a/grumpy-runtime-src/MANIFEST.in
+++ b/grumpy-runtime-src/MANIFEST.in
@@ -2,6 +2,7 @@ global-include *.py
 global-include *.go
 global-include *.mk
 global-include Makefile
+recursive-include tools *
 
 global-exclude *.egg-info/*
 global-exclude *_test.py
